[package]
name = "rusty-space-program"
version = "0.1.0"
authors = [
    "Zion Nimchuk <zionnimchuk@gmail.com>",
    "Ben McGunigle <bnmcgn@gmail.com>"]

[[bin]]
name = "rusty-space-program"

[dependencies]
piston = "0.37.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
