[package]
name = "rusty-space-program"
version = "0.1.0"
authors = [
    "Zion Nimchuk <zionnimchuk@gmail.com>",
    "Ben McGunigle <bnmcgn@gmail.com>"]

[[bin]]
name = "rusty-space-program"

[dependencies]
piston = "0.37.0"
piston2d-graphics = "0.26.0"
#pistoncore-window = "*"
piston2d-opengl_graphics = "0.53.0"
piston_window = "0.80.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.24.0"
piston2d-sprite = "0.45.0"
piston-music = "0.24.0"
pistoncore-sdl2_window = "0.50.0"
image = "0.19.0"
time = "0.1.40"
rand = "0.5.4"
